test/ui/parsing/unexpected-token-in-expression.stderr
error[E010]: found ‘data’ but expected ‘.’, ‘::’, ‘'’, argument or line break
  ┌─ ${TEST_FOLDER}/parsing/unexpected-token-in-expression.lushui:1:8
  │
1 │ main = something data
  │        ───────── while parsing this expression starting here
  │
  ├─ ${TEST_FOLDER}/parsing/unexpected-token-in-expression.lushui:1:18
  │
1 │ main = something data
  │                  ════ unexpected token

error: aborting due to previous error

